# SirishaStudio

./: .gitignore  .replit  README.md  app.py  config.py  note.txt  pan_profile.json  pyproject.toml  replit.md  replit.nix  requirements.txt  run.bat  setup.bat
attached_assets/: Freshers_resume_1778847258818.docx  Ordinary_Template2_resume_1778847258821.docx  Ordinary_template_resume_1778847258820.docx  Pasted--DOCTYPE-html-html-head-style-body-background-0f172a-co_1777189584967.txt  Pasted-import-cv2-import-numpy-as-np-import-os-import-shutil-i_1777375495432.txt  Pasted-import-cv2-import-numpy-as-np-import-os-import-shutil-i_1777375507000.txt  Pasted-import-os-import-cv2-import-numpy-as-np-from-pdf2image-_1777190373257.txt  Pasted-import-os-import-cv2-import-numpy-as-np-from-pdf2image-_1777190393007.txt  Pasted-import-os-import-cv2-import-numpy-as-np-from-pdf2image-_1777370462888.txt  Pasted-import-os-import-cv2-import-numpy-as-np-from-pdf2image-_1777374932252.txt  Pasted-import-os-import-cv2-import-numpy-as-np-from-pdf2image-_1777374941490.txt  Pasted-import-os-import-re-from-PIL-import-Image-ImageOps-from_1777190116551.txt  Pasted-import-os-import-shutil-import-fitz-PyMuPDF-Much-faster_1777375424424.txt  Pasted-import-os-import-zipfile-import-gc-from-PIL-import-Imag_1777375411720.txt  Pasted-import-os-import-zipfile-import-gc-from-PIL-import-Imag_1777375433743.txt  Resume_Template_1_1777376717841.docx
resume_templates/: fresher.docx  ordinary.docx
templates/: aadhar.html  index.html  tool_compress.html  tool_convert.html  tool_custom.html  tool_dual.html  tray.html  (+6 more)
(+23 files in other folders)
