[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "pdf2image>=1.17.0",
    "pyhanko>=0.34.1",
    "pypdf>=6.10.2",
]
