[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "pdf2docx>=0.5.12",
    "pdf2image>=1.17.0",
    "pillow-heif>=1.3.0",
    "pyhanko>=0.34.1",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "reportlab>=4.4.10",
]
